Tests/InvalidTests/Test1_directive_and_immediate_wrong_use/test.as
MAIN: add r3, LIST
LOOP: prn #47
lea W, r9
inc r6, r6
.data 5 7
.string -15  9
mov r6

